--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -234,7 +234,7 @@ This summary of the latest changes to the Qiskit Runtime service applies to anyo
 - Starting 2 June 2025 and continuing through the year, IBM Quantum will begin a gradual rollout of new features to [dynamic circuits](/docs/guides/classical-feedforward-and-control-flow) that will enable them at the utility scale.
 Improvements include the following:
 
-  - A 75x speedup in execution by using the [Gen3 engine stack](/docs/guides/runtime-options-overview#experimental-option-note)
+  - A 75x speedup in execution by using the Gen3 engine stack
   - Parallel execution of branches, which reduces circuit duration and improves result quality
   - Improvement in mid-circuit measurement
   - Better integration with dynamical decoupling
@@ -252,7 +252,7 @@ Improvements include the following:
 
 **7 January 2025**
 
-- The rollout of the Gen3 engine stack begins today. This engine stack gives a 75x speedup in execution.  The rollout will be done on one QPU at a time, where a percentage of the jobs on the QPU will use the Gen3 path.  You can also force the Gen3 path using the [`gen3-turbo` experimental option.](/docs/guides/runtime-options-overview#available-options) Note that this engine stack is not compatible with fractional gates, pulse gates, or dynamic circuits.
+- The rollout of the Gen3 engine stack begins today. This engine stack gives a 75x speedup in execution.  The rollout will be done on one QPU at a time, where a percentage of the jobs on the QPU will use the Gen3 path.  You can also force the Gen3 path using the `gen3-turbo` experimental option. Note that this engine stack is not compatible with fractional gates, pulse gates, or dynamic circuits.
 
 **15 October 2024**
 
@@ -508,7 +508,7 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
   - Updated code examples to fix a bug in [Get started with primitives](/docs/guides/get-started-with-primitives)
 
-  - Updates to [Introduction to options](/docs/guides/runtime-options-overview) to include the new [gen3-turbo](/docs/guides/runtime-options-overview#experimental-option-note) options
+  - Updates to [Introduction to options](/docs/guides/runtime-options-overview) to include the new gen3-turbo options
 
   - Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
