Changed all details drop-downs

--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -266,17 +266,23 @@
    "id": "f3117328-61e0-45a2-b8f2-05356d210fae",
    "metadata": {},
    "source": [
-    "#### Check-in question\n",
+    "#### Check your understanding\n",
+    "Read the questions below, think about your answer, then click the triangle to reveal each solution.\n",
     "\n",
+    "<details>\n",
+    "<summary>\n",
     "Explain why it is not (a) useful, and (b) possible to extend the dimension of the Krylov subspace $r$ beyond the dimension $N$ of the matrix of interest.\n",
+    "\n",
+    "</summary>\n",
     "\n",
     "__Answer:__\n",
     "\n",
     "(a) Since we are orthonormalizing the vectors as we produce them, a set of $N$ such vectors will form a complete basis, meaning a linear combination of them can be used to create any vector in the space.\n",
     "(b) The orthogonalization process consists of subtracting off the projection of a new vector onto all previous vectors. If all previous vectors span the full vector space, then subtracting off projections onto the full subspace will always leave us with a zero vector.\n",
+    "</details>\n",
     "\n",
-    "#### Check-in question\n",
-    "\n",
+    "<details>\n",
+    "<summary>\n",
     "Suppose a fellow researcher is demonstrating the Krylov method applied to a small toy matrix for some colleagues. This fellow researcher plans to use the matrix and initial vector:\n",
     "$$\n",
     "A=\\begin{pmatrix}2&1&3\\\\1&2&3\\\\3&3&5\\end{pmatrix}\n",
@@ -287,17 +293,21 @@
     "$$\n",
     "Is there something wrong with this? How would you advise your colleague?\n",
     "\n",
+    "</summary>\n",
+    "\n",
     "__Answer:__\n",
     "\n",
     "Your colleague has accidentally chosen an eigenvector for his/her initial vector. Acting with the matrix on the initial vector will simply return the same vector back, scaled by the eigenvalue. This will not generate a subspace of increasing dimension. Advise your colleague to select a different initial vector, making sure it is not an eigenvector.\n",
+    "</details>\n",
     "\n",
-    "\n",
-    "#### Check-in question\n",
-    "\n",
+    "<details>\n",
+    "<summary>\n",
     "Apply the Krylov method to the matrix below, selecting an appropriate new initial vector. Write down the estimates of the minimum eigenvalue at the 0th and 1st order of your Krylov subspace.\n",
     "$$\n",
     "A=\\begin{pmatrix}1&1&0\\\\1&1&1\\\\0&1&1\\end{pmatrix}\n",
     "$$\n",
+    "\n",
+    "</summary>\n",
     "\n",
     "__Answer:__\n",
     "\n",
@@ -346,7 +356,8 @@
     "The eigenvectors are  [[ 0.98559856 -0.16910198]\n",
     " [ 0.16910198  0.98559856]]\n",
     "```\n",
-    "The minimum eigenvalue estimate is -0.414."
+    "The minimum eigenvalue estimate is -0.414.\n",
+    "</details>"
    ]
   },
   {
@@ -458,13 +469,21 @@
    "id": "2df5e11f-62fe-4237-bcaf-36dcc88f11a7",
    "metadata": {},
    "source": [
-    "#### Check-in question\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
+    "\n",
+    "<details>\n",
+    "<summary>\n",
+    "\n",
     "\n",
     "In the workflow above, we proposed minimizing the $A$-norm of the error. What other quantities might one consider minimizing in seeking the ground state and its eigenvalue?\n",
     "\n",
+    "</summary>\n",
+    "\n",
     "__Answer:__\n",
     "\n",
-    "One could imagine using the residual vector instead of the $A$-norm of the error. There might be cases in which considering the error vector itself is useful."
+    "One could imagine using the residual vector instead of the $A$-norm of the error. There might be cases in which considering the error vector itself is useful.\n",
+    "</details>"
    ]
   },
   {
@@ -934,15 +953,22 @@
    "id": "7782cac1-a86b-4a70-971f-3db5922838d7",
    "metadata": {},
    "source": [
-    "#### Check-in question\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Refer to the smoothed plot of diagonalization times vs. matrix dimension above.\n",
     "(a) At approximately what matrix dimension did the Krylov method become faster, according to this plot?\n",
     "(b) What aspects of the calculation could change that dimension at which the Krylov method becomes faster?\n",
     "\n",
+    "</summary>\n",
+    "\n",
     "__Answer:__\n",
+    "\n",
     "(a) Answers may vary if you re-run the calculation, but the Krylov method becomes faster at approximately dimension 50.\n",
-    "(b) There are many possible answers. Some important factors are the precision we require and the sparsity of the matrices being diagonalized."
+    "(b) There are many possible answers. Some important factors are the precision we require and the sparsity of the matrices being diagonalized.\n",
+    "</details>"
    ]
   },
   {
