--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -459,25 +459,47 @@
    "id": "41850d1d-3800-4aa0-aa01-fe6e72c872be",
    "metadata": {},
    "source": [
-    "### Check-in Questions\n",
+    "#### Check your understanding\n",
+    "Read the questions below, think about your answers, then click the triangles to reveal the solutions.\n",
     "\n",
-    "__Q:__ In a 10-qubit quantum circuit, generally, how many different states are there that could possibly be measured?\n",
+    "<details>\n",
+    "<summary>\n",
+    "\n",
+    "In a 10-qubit quantum circuit, generally, how many different states are there that could possibly be measured?\n",
+    "\n",
+    "</summary>\n",
     "\n",
     "__Answer:__\n",
     "\n",
     "$2^{10}$ or 1024.\n",
     "\n",
-    "__Q:__ Let us suppose that someone new to quantum computing attempts to use a quantum circuit that has very high two-qubit depth, and they do not use error mitigation. Let us further suppose that this results in an error rate of 10% on each qubit. If the true (error-free) kernel matrix element corresponding to this circuit is very large, say 1.0, what would be the probability of measuring all 10 qubits to be in the state with every qubit |0>?\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "<summary>\n",
+    "\n",
+    "Let us suppose that someone new to quantum computing attempts to use a quantum circuit that has very high two-qubit depth, and they do not use error mitigation. Let us further suppose that this results in an error rate of 10% on each qubit. If the true (error-free) kernel matrix element corresponding to this circuit is very large, say 1.0, what would be the probability of measuring all 10 qubits to be in the state with every qubit |0>?\n",
+    "\n",
+    "</summary>\n",
     "\n",
     "__Answer:__\n",
     "\n",
     "The probability of each qubit being correctly found in the |0> state is 0.90. The probability for all 10 qubits to be found in the correct state is $0.90^10$ or about 35%.\n",
     "\n",
-    "__Q:__ Explain in your own words why it is so important to monitor circuit depths. This is true generally, but explain it in the context of quantum kernel estimation.\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "<summary>\n",
+    "\n",
+    "Explain in your own words why it is so important to monitor circuit depths. This is true generally, but explain it in the context of quantum kernel estimation.\n",
+    "\n",
+    "</summary>\n",
     "\n",
     "__Answer:__\n",
     "\n",
-    "In this QKE workflow, our estimates are based on the measurements of the zero state, meaning the state in which every qubit is found in the $|0\\rangle$ state. Very deep circuits will introduce high error rates. When that error rate is compounded over many qubits, this will reduce the probability of measuring the zero state, substantially."
+    "In this QKE workflow, our estimates are based on the measurements of the zero state, meaning the state in which every qubit is found in the $|0\\rangle$ state. Very deep circuits will introduce high error rates. When that error rate is compounded over many qubits, this will reduce the probability of measuring the zero state, substantially.\n",
+    "\n",
+    "</details>"
    ]
   },
   {
