--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -1587,7 +1587,7 @@
     "\n",
     "This is known as the [discrete logarithm problem][77] (DLP).\n",
     "\n",
-    "### Mathematical details of the discrete logarithm problem (optional)\n",
+    "### Mathematical details of the discrete logarithm problem\n",
     "\n",
     "The DLP is typically framed in the context of [cyclic groups][Cyclic] and is stated as follows.\n",
     "\n",
