--- a/learning/modules/computer-science/quantum-teleportation.ipynb
+++ b/learning/modules/computer-science/quantum-teleportation.ipynb
@@ -223,20 +223,19 @@
    "id": "131d90c7-6ef3-4c32-a01b-52da9f8e0e83",
    "metadata": {},
    "source": [
-    "### Check-in question\n",
-    "\n",
-    "Most gates have the same matrix form in Qiskit as everywhere else. But the CNOT gate acts on two qubits, and so suddenly ordering conventions of qubits becomes an issue. Texts that order qubits $|q_0,q_1,...\\rangle$ will show a different matrix form for their CNOT gates. Verify by explicit matrix multiplication that the CNOT matrix above has the correct action on the state $|01\\rangle.$\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
     "\n",
     "<details>\n",
     "<summary>\n",
     "\n",
-    "<b>Answer:</b>\n",
+    "Most gates have the same matrix form in Qiskit as everywhere else. But the CNOT gate acts on two qubits, and so suddenly ordering conventions of qubits becomes an issue. Texts that order qubits $|q_0,q_1,...\\rangle$ will show a different matrix form for their CNOT gates. Verify by explicit matrix multiplication that the CNOT matrix above has the correct action on the state $|01\\rangle.$\n",
     "\n",
     "</summary>\n",
     "\n",
+    "__Answer:__\n",
     "\n",
     "$$CNOT|01\\rangle =\\begin{pmatrix} 1 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 1 & 0 & 0\\end{pmatrix}\\begin{pmatrix}0 \\\\ 1 \\\\ 0 \\\\0\\end{pmatrix} = \\begin{pmatrix}0 \\\\ 0 \\\\ 0 \\\\1\\end{pmatrix} = |11\\rangle$$\n",
-    "\n",
     "\n",
     "</details>"
    ]
@@ -399,16 +398,17 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "### Check-in question\n",
-    "\n",
-    "Given the expression above for the states of all three qubits, what is the probability that a measurement of qubits A and Q yields $|0\\rangle_A|0\\rangle_Q?$\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
     "\n",
     "<details>\n",
     "<summary>\n",
     "\n",
-    "<b>Answer:</b>\n",
+    "Given the expression above for the states of all three qubits, what is the probability that a measurement of qubits A and Q yields $|0\\rangle_A|0\\rangle_Q?$\n",
     "\n",
     "</summary>\n",
+    "\n",
+    "__Answer:__\n",
     "\n",
     "25%. To see this, recall that Bob's state must be normalized, so\n",
     "$$ |_A \\langle0|_Q\\langle0| \\frac{1}{2} |0\\rangle_A|0\\rangle_Q (\\alpha_0 |0\\rangle_B+\\alpha_1 |1\\rangle_B)|^2 = \\frac{1}{4}|(\\alpha_0 |0\\rangle_B+\\alpha_1 |1\\rangle_B)|^2 = \\frac{1}{4}$$\n",
@@ -756,19 +756,19 @@
    "id": "12dcb4f6-d105-41f0-8800-87f291ce1aeb",
    "metadata": {},
    "source": [
-    "### Check-in question\n",
-    "\n",
-    "Which of the states above indicate successful teleportation, and how can you tell?\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
     "\n",
     "<details>\n",
     "<summary>\n",
     "\n",
-    "<b>Answer:</b>\n",
+    "Which of the states above indicate successful teleportation, and how can you tell?\n",
     "\n",
     "</summary>\n",
     "\n",
-    "The states $|000\\rangle,$ $|001\\rangle,$ $|010\\rangle,$ $|011\\rangle$ are all consistent with successful teleportation. This is because we added a gate to undo the initial preparation of the secret state. If the secret state was successfully teleported to Bob's qubit, that additional gate should return Bob's qubit to the $|0\\rangle$ state. So any state above with Bob's qubit (qubit 0, also measured to the 0th component of the classical register, and hence the highest/right-most) in the $|0\\rangle$ state indicates success.\n",
+    "__Answer:__\n",
     "\n",
+    "The states $|000\\rangle,$ $|001\\rangle,$ $|010\\rangle,$ $|011\\rangle$ are all consistent with successful teleportation. This is because we added a gate to undo the initial preparation of the secret state. If the secret state was successfully teleported to Bob's qubit, that additional gate should return Bob's qubit to the $|0\\rangle$ state. So any state above with Bob's qubit (qubit 0, also measured to the 0th component of the classical register, and hence the highest/right-most) in the $|0\\rangle$ state indicates success.\n",
     "\n",
     "</details>\n",
     "\n",
