--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -490,33 +490,54 @@
    "source": [
     "We can quantify this using uncertainty, or variance. The \"uncertainty\" is often defined to be the square root of the \"variance\" of a distribution. That is, the uncertainty for some observable $S$ is denoted $\\Delta S$ and is given by\n",
     "\n",
-    "$$(\\Delta S)^2 \\equiv \\langle (S - \\langle S \\rangle)^2 \\rangle$$\n",
-    "$$(\\Delta S)^2 = \\langle S^2 - 2 S \\langle S \\rangle +\\langle S \\rangle^2 \\rangle$$\n",
-    "$$(\\Delta S)^2 = \\langle S^2 \\rangle - \\langle S \\rangle^2$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "(\\Delta S)^2 & \\equiv \\langle (S - \\langle S \\rangle)^2 \\rangle\\\\\n",
+    "\n",
+    "(\\Delta S)^2 & = \\langle S^2 - 2 S \\langle S \\rangle +\\langle S \\rangle^2 \\rangle\\\\\n",
+    "\n",
+    "(\\Delta S)^2 & = \\langle S^2 \\rangle - \\langle S \\rangle^2\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "\n",
     "For the case of Pauli matrices, for which $S^2 = I$, this becomes\n",
     "\n",
-    "$$(\\Delta S)^2 = 1 - \\langle S \\rangle^2$$\n",
+    "$$\n",
+    "(\\Delta S)^2 = 1 - \\langle S \\rangle^2\n",
+    "$$\n",
     "\n",
-    "Let's apply this to a concrete example. Let's start with the state $|\\psi\\rangle |+\\rangle_y = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\ i \\end{pmatrix},$ and let's determine the uncertainty of the observable $X$ in that state.\n",
+    "Let's apply this to a concrete example. Let's start with the state $|\\psi\\rangle = |+\\rangle_y = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\ i \\end{pmatrix},$ and let's determine the uncertainty of the observable $X$ in that state.\n",
     "\n",
-    "We can create an arbitrary initial state using ```qc.initialize()```. Note that the syntax for the imaginary unit here is $1j$.\n",
-    "\n",
-    "### Check-in question:\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Calculate the uncertainty of $X$ in the state $|+\\rangle_y = |+i\\rangle$, by hand.\n",
     "\n",
-    "<details>\n",
-    "<summary>Answer:</summary>\n",
+    "</summary>\n",
     "\n",
-    "$$\\Delta X =\\sqrt{\\langle+i| X^2 |+i\\rangle - \\langle+i| X |+i\\rangle^2}$$\n",
+    "__Answer:__\n",
+    "\n",
+    "$$\n",
+    "\\Delta X =\\sqrt{\\langle+i| X^2 |+i\\rangle - \\langle+i| X |+i\\rangle^2}\n",
+    "$$\n",
     "In the given state, this yields:\n",
-    "$$\\Delta X =\\sqrt{\\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ i\\end{pmatrix}\\right)^2}$$\n",
-    "$$\\Delta X =\\sqrt{\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}1 & 0 \\\\ 0 & 1\\end{pmatrix} \\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}i \\\\ 1\\end{pmatrix}\\right)^2}$$\n",
-    "$$\\Delta X =\\sqrt{\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{2}(0))\\right)^2}$$\n",
-    "$$\\Delta X =\\sqrt{\\frac{1}{2}(2)} = 1$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\Delta X & =\\sqrt{\\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ i\\end{pmatrix}\\right)^2}\\\\\n",
     "\n",
-    "</details>"
+    "\\Delta X & =\\sqrt{\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}1 & 0 \\\\ 0 & 1\\end{pmatrix} \\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}i \\\\ 1\\end{pmatrix}\\right)^2}\\\\\n",
+    "\n",
+    "\\Delta X & =\\sqrt{\\frac{1}{2}\\begin{pmatrix}1 & -i\\end{pmatrix} \\begin{pmatrix}1 \\\\ i\\end{pmatrix} - \\left(\\frac{1}{2}(0))\\right)^2}\\\\\n",
+    "\n",
+    "\\Delta X & =\\sqrt{\\frac{1}{2}(2)} = 1\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "We can create an arbitrary initial state using ```qc.initialize()```. Note that the syntax for the imaginary unit here is $1j$."
    ]
   },
   {
@@ -708,44 +729,91 @@
     "The expectation value of $X$ should be close to 1.0, but should not exceed 1.0. Don't worry if it exceeds 1.0 by a very small amount. This can be attributed to factors like noise and/or readout error. Although this is a very important topic, we can ignore it for now.\n",
     "\n",
     "We obtained an expectation value of $X$ that is very close to 1.0 (corresponding to a very low variance for $X$). This makes the product of the two variances quite low:\n",
-    "$$\\Delta X \\Delta Z = \\sqrt{1-(0.9853)^2} \\times \\sqrt{1-(-0.00195)^2} = 0.171.$$\n",
-    "While this is not exactly zero, this value is getting small in comparison with the eigenvalues of the Pauli operators ($\\pm 1$). Well, you may recall that the uncertainty relation between linear position and momentum could be written differently, explicitly using the commutation relation between the operators $x$ and $p_x$:\n",
-    "$$\\Delta x \\Delta p_x \\geq \\frac{1}{2}|\\langle [x,p_x] \\rangle|$$\n",
-    "where\n",
-    "$$[x,p_x] = xp_x-p_xx$$\n",
-    "is the commutator of $x$ and $p_x$.\n",
-    "This is the form that that can be most easily extended to the Pauli operators. Generally, for two operators $A$ and $B$,\n",
-    "$$\\Delta A \\Delta B \\geq \\frac{1}{2}|\\langle [A,B] \\rangle|.$$\n",
-    "And in the case of the Pauli matrices $X$ and $Z$, we need $[X,Z]$ in order to calculate\n",
-    "$$\\Delta X \\Delta Z \\geq \\frac{1}{2}|\\langle [X,Z] \\rangle|.$$\n",
-    "We show this here, and leave similar calculations to the reader as an exercise:\n",
-    "$$[X,Z] = XZ-ZX = \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}-\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}\\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}$$\n",
-    "$$[X,Z] = \\begin{pmatrix}0 & -1 \\\\ 1 & 0\\end{pmatrix}-\\begin{pmatrix}0 & 1 \\\\ -1 & 0\\end{pmatrix} = 2\\begin{pmatrix}0 & -1 \\\\ 1 & 0\\end{pmatrix}$$\n",
-    "This is a perfectly acceptable answer, but with one more step, we see\n",
-    "$$[X,Z] = -2i\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}=-2iY$$\n",
-    "Our uncertainty relation thus becomes\n",
-    "$$\\Delta X \\Delta Z \\geq |\\langle Y \\rangle|.$$\n",
     "\n",
-    "### Check-in question\n",
+    "$$\n",
+    "\\Delta X \\Delta Z = \\sqrt{1-(0.9853)^2} \\times \\sqrt{1-(-0.00195)^2} = 0.171.\n",
+    "$$\n",
+    "\n",
+    "While this is not exactly zero, this value is getting small in comparison with the eigenvalues of the Pauli operators ($\\pm 1$). Well, you may recall that the uncertainty relation between linear position and momentum could be written differently, explicitly using the commutation relation between the operators $x$ and $p_x$:\n",
+    "\n",
+    "$$\n",
+    "\\Delta x \\Delta p_x \\geq \\frac{1}{2}|\\langle [x,p_x] \\rangle|\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "[x,p_x] = xp_x-p_xx\n",
+    "$$\n",
+    "\n",
+    "is the commutator of $x$ and $p_x$.\n",
+    "\n",
+    "This is the form that that can be most easily extended to the Pauli operators. Generally, for two operators $A$ and $B$,\n",
+    "$$\n",
+    "\\Delta A \\Delta B \\geq \\frac{1}{2}|\\langle [A,B] \\rangle|.\n",
+    "$$\n",
+    "And in the case of the Pauli matrices $X$ and $Z$, we need $[X,Z]$ in order to calculate\n",
+    "$$\n",
+    "\\Delta X \\Delta Z \\geq \\frac{1}{2}|\\langle [X,Z] \\rangle|.\n",
+    "$$\n",
+    "We show this here, and leave similar calculations to the reader as an exercise:\n",
+    "$$\n",
+    "[X,Z] = XZ-ZX = \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}-\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}\\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}\n",
+    "$$\n",
+    "$$\n",
+    "[X,Z] = \\begin{pmatrix}0 & -1 \\\\ 1 & 0\\end{pmatrix}-\\begin{pmatrix}0 & 1 \\\\ -1 & 0\\end{pmatrix} = 2\\begin{pmatrix}0 & -1 \\\\ 1 & 0\\end{pmatrix}\n",
+    "$$\n",
+    "This is a perfectly acceptable answer, but with one more step, we see\n",
+    "\n",
+    "$$\n",
+    "[X,Z] = -2i\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}=-2iY\n",
+    "$$\n",
+    "\n",
+    "Our uncertainty relation thus becomes\n",
+    "\n",
+    "$$\n",
+    "\\Delta X \\Delta Z \\geq |\\langle Y \\rangle|.\n",
+    "$$\n",
+    "\n",
+    "#### Check your understanding\n",
+    "Read the question below, think about your answer, then click the triangle to reveal the solution.\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Determine $[X,Y]$ and $[Y,Z]$. Use this to write down the uncertainty relations between $X$ & $Y$, and $Y$ & $Z$.\n",
     "\n",
-    "<details>\n",
-    "<summary>Answer:</summary>\n",
+    "</summary>\n",
     "\n",
-    "$$[X,Y] = XY-YX = \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}-\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} = 2 \\begin{pmatrix}i & 0 \\\\ 0 & -i\\end{pmatrix}=2iZ$$\n",
+    "__Answer:__\n",
     "\n",
-    "$$[Y,Z] = YZ-ZY = \\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}-\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix} = 2 \\begin{pmatrix}0 & i \\\\ i & 0\\end{pmatrix}=2iX$$\n",
+    "$$\n",
+    "[X,Y] = XY-YX = \\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}-\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\begin{pmatrix}0 & 1 \\\\ 1 & 0\\end{pmatrix} = 2 \\begin{pmatrix}i & 0 \\\\ 0 & -i\\end{pmatrix}=2iZ\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "[Y,Z] = YZ-ZY = \\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}-\\begin{pmatrix}1 & 0 \\\\ 0 & -1\\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix} = 2 \\begin{pmatrix}0 & i \\\\ i & 0\\end{pmatrix}=2iX\n",
+    "$$\n",
+    "\n",
     "Combining with the general uncertainty relation, we have\n",
-    "$$\\Delta X \\Delta Y \\geq |\\langle Z \\rangle|,$$\n",
-    "$$\\Delta Y \\Delta Z \\geq |\\langle X \\rangle|.$$\n",
+    "$$\n",
+    "\\Delta X \\Delta Y \\geq |\\langle Z \\rangle|,\n",
+    "$$\n",
+    "$$\n",
+    "\\Delta Y \\Delta Z \\geq |\\langle X \\rangle|.\n",
+    "$$\n",
+    "\n",
     "</details>\n",
     "\n",
     "### Verify consistency\n",
     "\n",
     "Before moving on, let us check that this was consistent with our previous finding. We used the state $|\\psi\\rangle = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\ 1 \\end{pmatrix}.$ And we found that $\\Delta X \\Delta Z  = 0.171.$ Now we know this product should be greater than or equal to\n",
-    "$$|\\langle Y \\rangle|=\\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 & 1 \\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\ 1 \\end{pmatrix}$$\n",
-    "$$|\\langle Y \\rangle| = \\frac{1}{2}\\begin{pmatrix} 1 & 1 \\end{pmatrix}\\begin{pmatrix} -i \\\\ i \\end{pmatrix} = \\frac{1}{2}(-i+i) = 0.$$\n",
+    "$$\n",
+    "|\\langle Y \\rangle|=\\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 & 1 \\end{pmatrix}\\begin{pmatrix}0 & -i \\\\ i & 0\\end{pmatrix}\\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\ 1 \\end{pmatrix}\n",
+    "$$\n",
+    "$$\n",
+    "|\\langle Y \\rangle| = \\frac{1}{2}\\begin{pmatrix} 1 & 1 \\end{pmatrix}\\begin{pmatrix} -i \\\\ i \\end{pmatrix} = \\frac{1}{2}(-i+i) = 0.\n",
+    "$$\n",
+    "\n",
     "So indeed, $\\Delta X \\Delta Z  = 0.171 \\geq |\\langle Y \\rangle|=0$"
    ]
   },
@@ -757,7 +825,10 @@
     "Use the questions below to build some intuition for these findings:\n",
     "\n",
     "\n",
-    "### Check-in questions:\n",
+    "#### Check your understanding\n",
+    "Read the questions below, think about your answers, then click the triangles to reveal the solutions.\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Answer the following items together as a set:\n",
     "\n",
@@ -771,8 +842,9 @@
     "\n",
     "(e) Write code to explicitly check this using estimator.\n",
     "\n",
-    "<details>\n",
-    "<summary>Answers:</summary>\n",
+    "</summary>\n",
+    "\n",
+    "__Answers:__\n",
     "\n",
     "(a) We might expect eigenstates of the $X$ operator to yield zero uncertainty in $X$. Indeed, using $|\\psi\\rangle = |+\\rangle_x,$ we have\n",
     "$$\\Delta X = \\sqrt{1-\\langle X \\rangle^2} = \\sqrt{1-1^2} = 0.$$\n",
@@ -814,7 +886,8 @@
     "</details>\n",
     "\n",
     "\n",
-    "### Check-in questions:\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Answer the following items together as a set:\n",
     "\n",
@@ -828,8 +901,9 @@
     "\n",
     "(e) Write code to explicitly check this using estimator.\n",
     "\n",
-    "<details>\n",
-    "<summary>Answers:</summary>\n",
+    "</summary>\n",
+    "\n",
+    "__Answers:__\n",
     "\n",
     "(a) We expect to find $\\langle Y \\rangle\\approx 1$ for the eigenstate of $Y$: $|+\\rangle_y$.\n",
     "\n",
@@ -1104,12 +1178,16 @@
    "source": [
     "Now we see that the limit on the uncertainty $(\\Delta X \\Delta Z)$ is being put to the test! The red curve comes much closer to the orange curve than before. In fact, in the absence of noise, the uncertainty relation would be exactly saturated ($(\\Delta X \\Delta Z) = \\langle Y \\rangle$) one point. In the presence of noise and readout error, it should not be surprising if a run occassionally yields $(\\Delta X \\Delta Z)$ very slightly larger than $\\langle Y \\rangle.$ This is not a true violation of uncertainty; it is just an artifact of non-zero error.\n",
     "\n",
-    "### Check-in question:\n",
+    "#### Check your understanding\n",
+    "Read the questions below, think about your answers, then click the triangles to reveal the solutions.\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Explain how you would push this to the absolute limit, making $\\langle Y \\rangle$ as large as possible?\n",
     "\n",
-    "<details>\n",
-    "<summary> Answer:</summary>\n",
+    "</summary>\n",
+    "\n",
+    "__Answer:__\n",
     "\n",
     "The code currently has lines that rotate the default initial state $|0\\rangle$, down from the $z$ axis by some parametrized angle $\\theta$ and then also around the $z$ axis by an angle $\\pi/4,$ which rotates the state vector part of the way over to the $y$ axis.\n",
     "\n",
@@ -1127,12 +1205,15 @@
     "\n",
     "</details>\n",
     "\n",
-    "### Check-in question:\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Change the code or copy it over and implement that check of the uncertainty relation with the expectation value of Y maximized. Does the uncertainty relation hold?\n",
     "\n",
-    "<details>\n",
-    "<summary> Answer:</summary>\n",
+    "</summary>\n",
+    "\n",
+    "__Answer:__\n",
+    "\n",
     "We would use exactly the code from the example above, with\n",
     "\n",
     "`qc.rz(pi/2,0)`\n",
@@ -1142,15 +1223,10 @@
     "`qc.rz(pi/4,0).`\n",
     "\n",
     " The resulting figure should look like that below, and yes, the uncertainty principle should still be valid.\n",
+    "\n",
+    " ![A plot comparing uncertainty to the maximum expectation value of the Y operator.](/learning/images/modules/quantum-mechanics/exploring-uncertainty-with-qiskit/checkin.avif)\n",
+    "\n",
     "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9603d6e7-43d9-47ad-a4ad-3879c30146a0",
-   "metadata": {},
-   "source": [
-    "![A plot comparing uncertainty to the maximum expectation value of the Y operator.](/learning/images/modules/quantum-mechanics/exploring-uncertainty-with-qiskit/checkin.avif)"
    ]
   },
   {
@@ -1158,56 +1234,44 @@
    "id": "6dd8c749-00d6-4a08-8d3c-2f5b5f3a0902",
    "metadata": {},
    "source": [
-    "### Check-in question:\n",
+    "<details>\n",
+    "<summary>\n",
     "\n",
     "Modify the code above to make a similar picture, demonstrating that from measurements on the quantum computer the product $\\Delta X \\Delta Y$ behaves as it should. Choose any set of states you like.\n",
     "\n",
-    "<details>\n",
-    "<summary>Answer:</summary>\n",
+    "</summary>\n",
+    "\n",
+    "__Answer:__\n",
+    "\n",
     "We would use exactly the code from the example above, and in face we could use the same results from above, just using the expectation values to calculate different uncertainties. For example, we could use\n",
     "\n",
-    "`xs=res[0].data.evs[0]`\n",
-    "\n",
-    "`ys=res[0].data.evs[1]`\n",
-    "\n",
-    "`zs=abs(res[0].data.evs[2])`\n",
-    "\n",
-    "`import math`\n",
-    "\n",
-    "`delx = []`\n",
-    "\n",
-    "`dely = []`\n",
-    "\n",
-    "`prodxy=[]`\n",
-    "\n",
-    "`for i in range(len(xs)):`\n",
-    "\n",
-    "`    delx.append((1-xs[i]*xs[i])**0.5)`\n",
-    "\n",
-    "`    dely.append((1-ys[i]*ys[i])**0.5)`\n",
-    "\n",
-    "`    prodxy.append(((1-xs[i]*xs[i])**0.5)*(1-ys[i]*ys[i])**0.5)`\n",
+    "```\n",
+    "xs=res[0].data.evs[0]\n",
+    "ys=res[0].data.evs[1]\n",
+    "zs=abs(res[0].data.evs[2])\n",
+    "import math\n",
+    "delx = []\n",
+    "dely = []\n",
+    "prodxy=[]\n",
+    "for i in range(len(xs)):\n",
+    "    delx.append((1-xs[i]*xs[i])**0.5)\n",
+    "    dely.append((1-ys[i]*ys[i])**0.5)\n",
+    "    prodxy.append(((1-xs[i]*xs[i])**0.5)*(1-ys[i]*ys[i])**0.5)\n",
+    "```\n",
     "\n",
     "and we could plot\n",
     "\n",
-    "\n",
-    "`import matplotlib.pyplot as plt`\n",
-    "\n",
-    "`plt.plot(params, delx, label=r'$\\Delta$ X')`\n",
-    "\n",
-    "`plt.plot(params, dely, label=r'$\\langle$ Y $\\rangle$')`\n",
-    "\n",
-    "`plt.plot(params, zs, label=r'$\\Delta$ Z')`\n",
-    "\n",
-    "`plt.plot(params, prodxy, label=r'$\\Delta$X $\\Delta$Z')`\n",
-    "\n",
-    "`plt.xlabel(r'$\\theta$')`\n",
-    "\n",
-    "`plt.ylabel('Expectation/Uncertainty Values')`\n",
-    "\n",
-    "`plt.legend()`\n",
-    "\n",
-    "`plt.show()`\n",
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(params, delx, label=r'$\\Delta$ X')\n",
+    "plt.plot(params, dely, label=r'$\\langle$ Y $\\rangle$')\n",
+    "plt.plot(params, zs, label=r'$\\Delta$ Z')\n",
+    "plt.plot(params, prodxy, label=r'$\\Delta$X $\\Delta$Z')\n",
+    "plt.xlabel(r'$\\theta$')\n",
+    "plt.ylabel('Expectation/Uncertainty Values')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "```\n",
     "\n",
     "</details>"
    ]
