Embedded videos in QiC

--- a/learning/modules/computer-science/quantum-teleportation.ipynb
+++ b/learning/modules/computer-science/quantum-teleportation.ipynb
@@ -22,17 +22,12 @@
    "id": "404ed202-a761-4e82-a480-ce59d4b04adf",
    "metadata": {},
    "source": [
+    "Watch the module walkthrough by Dr. Katie McCormick below, or click [here](https://youtu.be/jxqnzltpDdE?si=UVL58hFOOWe2Q9qI) to watch it on YouTube.\n",
+    "\n",
     "-------\n",
     "\n",
-    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "\n",
-    "<ImageLink\n",
-    "  title=\"How Quantum Teleportation Really Works\"\n",
-    "  alt=\"YT thumbnail\"\n",
-    "  href=\"https://youtu.be/jxqnzltpDdE?si=UVL58hFOOWe2Q9qI\"\n",
-    "  src=\"/learning/images/modules/computer-science/quantum-teleportation/YT-thumb.avif\"\n",
-    "/>"
+    "<IBMVideo id=\"134413680\" title=\"Katie McCormick demystifies quantum teleportation, and walks us through some examples using Qiskit.\"/>"
    ]
   },
   {
