--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -30,16 +30,12 @@
    "id": "fba0059c-4008-4076-95f2-18dab949ca9e",
    "metadata": {},
    "source": [
+    "Watch the module walkthrough by Dr. Katie McCormick below, or click [here](https://www.youtube.com/watch?v=TZ-sUHK8vVQ&list=PLOFEBzvs-Vvrs2fuvsuT039ariYPsua3d&index=6) to watch it on YouTube.\n",
+    "\n",
     "-------\n",
     "\n",
-    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
     "\n",
-    "<ImageLink\n",
-    "  title=\"Superposition: The Quantum Principle That Changes Everything\"\n",
-    "  alt=\"YT thumbnail\"\n",
-    "  href=\"https://www.youtube.com/watch?v=TZ-sUHK8vVQ&list=PLOFEBzvs-Vvrs2fuvsuT039ariYPsua3d&index=6\"\n",
-    "  src=\"/learning/images/modules/quantum-mechanics/superposition-with-qiskit/YT-thumb.avif\"\n",
-    "/>"
+    "<IBMVideo id=\"134413671\" title=\"Katie McCormick explains quantum superposition, and explores measurements of it on a real quantum computer.\"/>"
    ]
   },
   {
